fixed spacing of camp selections

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -17,3 +17,7 @@ body {
 .delete-form {
   display: inline;
 }
+
+.footer-margin {
+  height: 100px;
+}
